COR-4049: update source code after bumping to 1.11.0